Keep AI analysis compatible with minSdk 29